--- a/spotify.html
+++ b/spotify.html
@@ -19,7 +19,7 @@
 
     <div class="container-fluid py-4 px-5 ">
         <div class="row text-white">
-            <div class="col-6 col-md-4 col-lg-2 px-5 col-lg-3 mt-5 border-end border-dark navbarHeight fixed-top">
+            <div class="col-6 col-md-4 col-lg-2 px-5 mt-5 border-end border-dark navbarHeight fixed-top">
                 <ul class="list-unstyled ">
                     <li class="py-2 mt-3">
                         <img class="rounded-circle" width="45px"
@@ -57,7 +57,7 @@
                 </button>
             </div>
 
-            <div class="col-6 col-md-8 py-4 px-4 ms-auto">
+            <div class="col-6 col-md-8 col-lg-10 py-4 px-4 ms-auto">
 
                 <div class="row border-bottom border-dark py-2">
 
@@ -96,7 +96,7 @@
                             </div>
 
 
-                            <div class="col-12 col-sm-12  col-md-4 col-lg-4 col-xl-2 border border-dark border-darks mx-auto  lh-sm mb-2">
+                            <div class="col-12 col-sm-12  col-md-4 col-lg-4 col-xl-2 border border-dark border-darks mx-auto lh-sm mb-2">
                                 <img class="img-fluid" src="https://picsum.photos/id/238/200/240" alt="">
                                 <p class="fw-bold fs-6 mt-2 "> Deep Focus </p>
                                 <span class="text-secondary ">
